# DX9-Tex-engine

./: CMakeLists.txt  PLAN.md
.same/: compilation-fixes.md  todos.md
sdk/: README.md
shaders/: basic.hlsl.txt  lava_effect.hlsl.txt  metal_reflection.hlsl.txt  multitexture.hlsl.txt  procedural_noise.hlsl.txt  water_distortion.hlsl.txt
src/: main.cpp
src/Core/: ConfigManager.cpp  ConfigManager.h  Engine.cpp  Engine.h  Timer.cpp  Timer.h  Utils.h  Window.cpp  Window.h
src/Graphics/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h
src/Shaders/: Effect.cpp  Effect.h  ShaderManager.cpp  ShaderManager.h
src/Textures/: Material.cpp  Material.h  Texture.cpp  Texture.h  TextureEffects.cpp  TextureEffects.h  TextureManager.cpp  TextureManager.h
src/Textures/Effects/: AnimatedEffects.cpp  AnimatedEffects.h  NoiseGenerator.cpp  NoiseGenerator.h  PostEffects.cpp  PostEffects.h  ProceduralTextures.cpp  ProceduralTextures.h  README.md  TODO.md  TextureEffectManager.cpp  TextureEffectManager.h  TextureUtils.cpp  TextureUtils.h  UVEffects.cpp  UVEffects.h
